--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-core": "^1.10.0",
+    "@devexpress/dx-react-grid": "^1.10.0",
+    "@devexpress/dx-react-grid-material-ui": "^1.10.0",
     "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
     "apollo-boost": "^0.1.15",
